AM 31/05/09
- Solved a bug in peersim.edsim.EDSimulator
  ClassCastException generated inside a user Control object
  were caught by the EDSimulator and a misleading error
  message was printed.

AM 30/04/09
- Solved a bug in ConfigContainer.  
  ConfigContainer.getInstance(String name, Object def) was 
  returning the default object even if name was defined but
  a parameter was missing in the definition of the created
  object. Thanks to Marco Biazzini for spotting this.
- Improved the functionality of configuration file parsing
  in peersim.config.ConfigProperties. Now, each of the
  command line parameter is first interpreted as a file
  name, and if this file does not exist, it is set as
  a configuration property. This allows the configuration 
  to be split in multiple files.
  Thanks to Jordi Pujol for suggesting the idea and
  implementing a first version of it.  

AM 8/11/2008
VERSION 1.0.4 RELEASED
------------------------------------------------------------------
------------------------------------------------------------------

AM 8/10/08
- Modified EDSimulator to print additional information in case
  of protocols not implementing a particular interface. Class cast
  exceptions launched by event processing are not swallowed any
  more.

AM 6/6/08
- Solved a bug in EDSimulator. Time was not reset to zero when network
  is re-initialized, this caused some problems in case of multiple
  experiments.

AM 24/05/08
- Solved a bug in ConfigContainer; some exceptions were incorrectly
  swallowed.

AM 23/05/08
- Improved KingParser; it now performs some check about file format, and
  print out the appropriate exceptions.

MJ 21/05/08
- Fixed serious initialization bug in MedianStats
- Changed OracleIdleProtocol, UniformRandomTransport and UnreliableTransport
  into final, due to their unconventional implementation of "clone" (they are
  singletons)
- Fixed minor issues in IncrementalFreq related to java conventions on equals
  and hashCode